--- a/src/css/components/combobox.css
+++ b/src/css/components/combobox.css
@@ -1,5 +1,4 @@
 .input__wrapper-combobox {
-    min-width: 260px;
     height: 26px;
     background-color: var(--white-color);
     display: flex;
@@ -55,6 +54,7 @@
     border: 1px solid #babec5;
     border-radius: 2px;
     box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, 0.05);
+    z-index: 2;
 }
 
 .option__list-combobox {
