--- a/src/css/components/dropdown.css
+++ b/src/css/components/dropdown.css
@@ -43,6 +43,7 @@
     border-radius: var(--border-radius);
     box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, 0.05);
     border: 1px solid #babec5;
+    /* z-index: 5; */
 }
 
 .option__wrapper-lang {
@@ -55,6 +56,7 @@
     border-radius: var(--border-radius);
     box-shadow: 0 -8px 34px 0 rgba(0, 0, 0, 0.05);
     border: 1px solid #babec5;
+    z-index: 5;
 }
 
 .option__list {
