--- a/src/css/base.css
+++ b/src/css/base.css
@@ -36,7 +36,7 @@
     );
     --tab__router-height: 31px;
 
-    --size-row: 30px;
+    --size-row: 28px;
     --popup-right__title-padding: 16px 16px 12px 16px;
     /* bg tooltip để thay đổi khi thông báo lỗi hoặc thông báo */
     --bg-tooltip: #505050;
@@ -119,6 +119,14 @@ button {
 /* text align- center */
 .text-align-center {
     text-align: center;
+}
+
+.mr-7 {
+    margin-right: 7px;
+}
+
+.ml-40 {
+    margin-left: 40px;
 }
 
 /* text align- left */
