--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -86,18 +86,18 @@
 .employee tbody tr td:nth-child(3), 
 .employee thead tr th:nth-child(2),
 .employee tbody tr td:nth-child(2),*/
-.employee thead tr th:first-child,
+/* .employee thead tr th:first-child,
 .employee tbody tr td:first-child {
     position: sticky;
     bottom: 0;
     z-index: 2;
     border-right: 0;
-}
+} */
 
-.employee thead tr th:first-child,
+/* .employee thead tr th:first-child,
 .employee tbody tr td:first-child {
     left: 0;
-}
+} */
 
 /* .employee thead tr th:nth-child(2),
 .employee tbody tr td:nth-child(2) {
@@ -111,7 +111,7 @@
 
 /* .employee tbody tr td:nth-child(3)::after,
 .employee tbody tr td:nth-child(2)::after, */
-.employee tbody tr td:first-child::after {
+/* .employee tbody tr td:first-child::after {
     content: "";
     height: 100%;
     position: absolute;
@@ -119,7 +119,7 @@
     top: 0;
     z-index: 4;
     border-right: 1px dotted var(--boder-primary);
-}
+} */
 
 /* .employee thead tr th:first-child::after {
     content: "";
@@ -142,6 +142,7 @@
 .employee tbody tr td:nth-child(2), */
 .employee tbody tr td:first-child {
     background-color: #ffff;
+    border-right: 1px dotted var(--boder-primary);
 }
 
 .employee thead tr th:last-child,
@@ -270,4 +271,11 @@
 .table__accountSysterm thead tr th:nth-child(7),
 .table__accountSysterm tbody tr td:nth-child(7) {
     min-width: 100px;
+}
+
+.row-parent {
+    font-size: 1.3rem;
+    color: #111;
+    font-weight: 700;
+    font-family: notosansBold;
 }
