--- a/src/css/components/tooltips.css
+++ b/src/css/components/tooltips.css
@@ -29,7 +29,7 @@
     position: absolute;
     z-index: 99;
     transform: translateX(-50%);
-    bottom: 110%;
+    top: 150%;
     left: 50%;
     height: 26px;
     display: flex;
@@ -78,12 +78,12 @@
 .tooltipData::after {
     content: "";
     position: absolute;
-    top: 100%;
+    bottom: 100%;
     left: 50%;
     transform: translateX(-50%);
     border-width: 5px;
     border-style: solid;
-    border-color: var(--bg-tooltip) transparent transparent transparent;
+    border-color: transparent transparent var(--bg-tooltip) transparent;
 }
 
 .tooltiptextHide::after {
