--- a/src/css/layout/content.css
+++ b/src/css/layout/content.css
@@ -137,7 +137,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    overflow-x: scroll;
-    overflow-y: scroll;
+    overflow-x: auto;
+    overflow-y: auto;
     position: relative;
 }
