--- a/src/css/layout/sidebar/cash.css
+++ b/src/css/layout/sidebar/cash.css
@@ -51,8 +51,8 @@
 }
 
 .cash__main {
-    width: 75%;
-    height: calc(100% - 30%);
+    width: 50%;
+    /* height: calc(100% - 30%); */
     display: flex;
     align-items: center;
     column-gap: var(--column-gap);
@@ -60,7 +60,7 @@
 }
 
 .cash__process {
-    width: 70%;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -129,6 +129,7 @@
 .cash__process-bottom-text {
     color: #111;
     margin-top: 5px;
+    text-align: center;
 }
 
 .cash__report {
@@ -152,17 +153,17 @@
 }
 
 .receive {
-    top: 40px;
-    left: 90px;
+    top: 52px;
+    left: 97px;
 }
 
 .payment {
-    top: 215px;
-    left: 90px;
+    top: 240px;
+    left: 97px;
 }
 
 .audit {
-    top: 125px;
-    left: 335px;
+    top: 145px;
+    left: 359px;
     width: 125px !important;
 }
