insert payment part 1

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -341,14 +341,21 @@ div.disabled {
     background: #ccc;
 }
 
+
+.disabledDopdown {
+       pointer-events: none;
+    background-color: #eff0f2 !important;
+}
+
 .account__systerm-detail .disabledDopdown {
     pointer-events: none;
     background-color: #eff0f2;
 }
 
-.account__systerm-detail .disabledDopdown:hover {
+
+/* .account__systerm-detail .disabledDopdown:hover {
     background-color: #eff0f2;
-}
+} */
 
 .cursor-pointer {
     cursor: pointer;
