--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -158,12 +158,19 @@
     font-size: 13px;
     line-height: 13px;
     color: var(--white-color);
+     border-radius: 30px 0 0 30px;
 }
 
 .combox-btn-text:hover {
     background-color: var(--btn-color-primary-hover);
     cursor: pointer;
     border-radius: 30px 0 0 30px;
+}
+
+.combox-btn-left:hover{
+     background-color: var(--btn-color-primary-hover);
+    cursor: pointer;
+    border-radius: 3px 0 0 3px;
 }
 
 .combox-btn-mark {
@@ -185,6 +192,12 @@
     background-color: var(--btn-color-primary-hover);
     cursor: pointer;
     border-radius: 0 30px 30px 0;
+}
+
+.wrap-icon-right:hover {
+    background-color: var(--btn-color-primary-hover);
+    cursor: pointer;
+    border-radius: 0 3px 3px 0;
 }
 
 .btn-primary:active {
