chức năng lọc cột

--- a/src/css/components/table.css
+++ b/src/css/components/table.css
@@ -15,7 +15,7 @@
     right: 0;
     border: none;
     z-index: 3;
-    height: var(--size-row-header);
+    height: var(--size-row);
 }
 
 .employee tr td {
