--- a/src/css/layout/cashPayment.css
+++ b/src/css/layout/cashPayment.css
@@ -4,11 +4,11 @@
 
 .check-all-arrow {
     display: inline-block;
-    padding: 4px 12px 0 0;
+    padding: 4px 0 0 0;
 }
 
 .cash_payment .content__main-left {
-    column-gap: 0;
+    /* column-gap: 0; */
 }
 
 .drilldown {
