--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -158,19 +158,24 @@
     font-size: 13px;
     line-height: 13px;
     color: var(--white-color);
-     border-radius: 30px 0 0 30px;
+    border-radius: 30px 0 0 30px;
+    background-color: var(--color-primary);
 }
 
 .combox-btn-text:hover {
     background-color: var(--btn-color-primary-hover);
     cursor: pointer;
-    border-radius: 30px 0 0 30px;
 }
 
 .combox-btn-left:hover{
      background-color: var(--btn-color-primary-hover);
     cursor: pointer;
     border-radius: 3px 0 0 3px;
+}
+
+.combox-btn-left:focus{
+     background-color: var(--btn-color-primary-hover);
+border-radius: 3px 0 0 3px;
 }
 
 .combox-btn-mark {
@@ -187,16 +192,22 @@
     align-items: center;
     cursor: pointer;
     padding: 0 12px 0 10px;
+    background-color: var(--color-primary);
+      border-radius: 0 30px 30px 0;
 }
 .wrap-icon-combox:hover {
     background-color: var(--btn-color-primary-hover);
     cursor: pointer;
-    border-radius: 0 30px 30px 0;
 }
 
 .wrap-icon-right:hover {
     background-color: var(--btn-color-primary-hover);
     cursor: pointer;
+    border-radius: 0 3px 3px 0;
+}
+
+.wrap-icon-right:focus {
+    background-color: var(--btn-color-primary-hover);
     border-radius: 0 3px 3px 0;
 }
 
@@ -218,6 +229,11 @@
 .btn-default:active {
     background-color: #cccc;
 }
+
+.btn-default:focus {
+    background-color: #cccc !important;
+}
+
 
 button {
     cursor: pointer;
